Update Investigating Fandango Movie Ratings.ipynb

--- a/12dq - Investigating Fandango Movie Ratings/Investigating Fandango Movie Ratings.ipynb
+++ b/12dq - Investigating Fandango Movie Ratings/Investigating Fandango Movie Ratings.ipynb
@@ -1092,7 +1092,7 @@
     "\n",
     "Our analysis showed that there's indeed a slight difference between Fandango's ratings for popular movies in 2015 and Fandango's ratings for popular movies in 2016. We also determined that, on average, popular movies released in 2016 were rated lower on Fandango than popular movies released in 2015.\n",
     "\n",
-    "We cannot be completely sure what caused the change, but the chances are very high that it was caused by Fandango fixing the biased rating system after Hickey's analysis.\n",
+    "We cannot be completely sure what caused the change, but the chances are that it was caused by Fandango fixing the biased rating system after Hickey's analysis.\n",
     "\n"
    ]
   },
