Update Investigating Fandango Movie Ratings.ipynb

--- a/12dq - Investigating Fandango Movie Ratings/Investigating Fandango Movie Ratings.ipynb
+++ b/12dq - Investigating Fandango Movie Ratings/Investigating Fandango Movie Ratings.ipynb
@@ -955,7 +955,7 @@
     "**Observations:**\n",
     "\n",
     "- In 2016, very high ratings (4.5 and 5 stars) had significantly lower percentages compared to 2015\n",
-    "- In contrast, movies with less higher rankings (4.0 and 3.5) significantly flourished.\n"
+    "- In contrast, movies with lesser rankings (4.0 and 3.5) significantly flourished.\n"
    ]
   },
   {
