--- a/Winning Jeopardy/Winning Jeopardy.ipynb
+++ b/Winning Jeopardy/Winning Jeopardy.ipynb
@@ -691,7 +691,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "lets apply normalize_value() on `Value` and normalize it into a new column `clean_value` and Convert `Air Date` into datetime"
+    "lets apply normalize_value() on `Value` and normalize it into a new column `clean_value` and convert `Air Date` into datetime"
    ]
   },
   {
