Update Investigating Fandango Movie Ratings.ipynb

--- a/Investigating Fandango Movie Ratings - Copy/Investigating Fandango Movie Ratings.ipynb
+++ b/Investigating Fandango Movie Ratings - Copy/Investigating Fandango Movie Ratings.ipynb
@@ -1053,7 +1053,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- We have 23 movies those need to be omitted to restrict our sample to only year 2016"
+    "- We have 23 movies those need to be omitted to restrict our sample to the year 2016"
    ]
   },
   {
