--- a/Mobile App for Lottery Addiction/Mobile App for Lottery Addiction.ipynb
+++ b/Mobile App for Lottery Addiction/Mobile App for Lottery Addiction.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "\n",
     "## Goal:\n",
-    "A medical institute that aims to prevent and treat gambling addictions wants to build a dedicated mobile app to help lottery addicts better estimate their chances of winning. The institute has a team of engineers that will build the app, but they need us to create the logical core of the app and calculate probabilities.\n",
+    "A medical institute that aims to prevent and treat gambling addictions wants to build a dedicated mobile application to help lottery addicts better estimate their chances of winning. The institute has a team of engineers that will build the app, but they need us to create the logical core of the app and calculate probabilities.\n",
     "\n",
     "For the first version of the app, they want us to focus on the [6/49 lottery](https://en.wikipedia.org/wiki/Lotto_6/49) and build functions that enable users to answer questions like:\n",
     "\n",
